--- a/css/layout.css
+++ b/css/layout.css
@@ -183,6 +183,18 @@
 	height: 50px;
 	background: url(../img/zzcx.png);
 }
+.ykzd_work_log {
+	width: 50px;
+	height: 50px;
+	background: url(../img/ykzd_log.png) no-repeat center;
+    background-size: 80%;
+}
+.p_logo {
+	width: 50px;
+	height: 50px;
+	background: url(../img/p_logo.png) no-repeat center;
+	background-size: 100%;
+}
 .right {
 	float: right;
 }
