--- a/css/layout.css
+++ b/css/layout.css
@@ -187,12 +187,13 @@
 	width: 50px;
 	height: 50px;
 	background: url(../img/ykzd_log.png) no-repeat center;
-    background-size: 80%;
+    background-size: contain;
+    background-color: #fff;
 }
 .p_logo {
 	width: 50px;
 	height: 50px;
-	background: url(../img/p_logo.png) no-repeat center;
+	background: url(../img/p_logo_canyan.png) no-repeat center;
 	background-size: 100%;
 }
 .right {
